--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# WebGL files
+WebGL Builds/
+connectwebgl.zip
+webgl_sharing
